openshift/pushgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway
  namespace: performance-monitoring
spec:
  selector:
    matchLabels:
      app: pushgateway
  replicas: 1
  template:
    metadata:
      labels:
        app: pushgateway
    spec:
      containers:
      - name: pushgateway
        image: prom/pushgateway
        ports:
        - containerPort: 9091
        resources:
          requests:
            cpu: "250m"
            memory: 256Mi
          limits:
            cpu: "250m"
            memory: 256Mi
        securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  namespace: performance-monitoring
spec:
  selector:
    app: pushgateway
  ports:
  - name: pushgateway
    port: 9091
    targetPort: 9091
  type: ClusterIP
