openshift/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: performance-monitoring
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-data
          mountPath: /var/lib/grafana
        - name: grafana-dashboard-config
          mountPath: /etc/grafana/provisioning/dashboards
        - name: grafana-dashboard-datasources
          mountPath: /etc/grafana/provisioning/datasources
        resources:
          requests:
            cpu: "250m"
            memory: 256Mi
          limits:
            cpu: "250m"
            memory: 256Mi
      volumes:
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data-pvc
      - name: grafana-dashboard-config
        configMap:
          name: grafana-dashboard-config
      - name: grafana-dashboard-datasources
        configMap:
          name: grafana-dashboard-datasources
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: performance-monitoring
spec:
  selector:
    app: grafana
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
spec:
  to:
    kind: Service
    name: grafana
  port:
    targetPort: grafana
