openshift/ingester.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingester
  namespace: performance-monitoring
spec:
  selector:
    matchLabels:
      app: ingester
  replicas: 1
  template:
    metadata:
      labels:
        app: ingester
    spec:
      containers:
      - name: ingester
        image: quay.io/redhat-appstudio-qe/performance-monitoring:main
        ports:
        - containerPort: 9091
        resources:
          requests:
            cpu: "250m"
            memory: 256Mi
          limits:
            cpu: "250m"
            memory: 256Mi
        securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: ingester
  namespace: performance-monitoring
spec:
  selector:
    app: ingester
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ingester
  namespace: performance-monitoring
spec:
  to:
    kind: Service
    name: ingester
  port:
    targetPort: http
